--- a/app/Resources/views/default/detail.html.twig
+++ b/app/Resources/views/default/detail.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    Détail d'ingrédient
+{% endblock %}
+
 {% block body %}
     <div class="container-fluid text-center">
         <div class="row">
