--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
-        <script type="application/javascript"src="{{ asset('assets/js/jquery-3.2.1.min.js') }}"></script>
-        <script type="application/javascript"src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
+        <script type="application/javascript" src="{{ asset('assets/js/jquery-3.2.1.min.js') }}"></script>
+        <script type="application/javascript" src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
         {% block javascripts %}
         {% endblock %}
     </body>
